3822B1FI1/1_gelu_omp/baranov_aleksey/log.txt
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp: In function ‘AlignedVector GeluOMP(const AlignedVector&)’:
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp:14:43: error: invalid increment expression
   14 |     for (auto sz = input.size(); i != sz; ++i)
      |                                           ^~~
